--- a/HttpClientAssistant/HttpClientAssistant.csproj
+++ b/HttpClientAssistant/HttpClientAssistant.csproj
@@ -5,5 +5,24 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <PropertyGroup>
+        <PackageId>HttpClientAssistant</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Hasan Hasanbayli</Authors>
+        <Company>Hasan Hasanbayli</Company>
+        <Description>HttpClient Assistant</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageTags>HttpClient, Assistant</PackageTags>
+        <RepositoryUrl>https://github.com/HasanHasanbayli/HttpClientAssistant</RepositoryUrl>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="../README.md" Pack="true" PackagePath=""/>
+    </ItemGroup>
 
 </Project>
